--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,8 +1,20 @@
 version: 2
 jobs:
-   build:
-     docker:
-       - image: circleci/python:3.6.1
-     steps:
-       - checkout
-       - run: echo "hello world"
+  build:
+
+    docker:
+      - image: circleci/python:3.6.1
+        environment:
+          FLASK_CONFIG: testing
+    steps:
+      - checkout
+      - run:
+          command: |
+            python3 -m venv venv
+            . venv/bin/activate
+            pip install -r requirements.txt
+      - run:
+          command: |
+            . venv/bin/activate
+            cd test
+            python main.test.py
