--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,20 +1,31 @@
 version: 2
 jobs:
   build:
-
     docker:
-      - image: circleci/python:3.6.1
-        environment:
-          FLASK_CONFIG: testing
+      - image: docker:17.05.0-ce-git
+      environment:
+        FLASK_CONFIG: testing
     steps:
       - checkout
+      - setup_remote_docker
       - run:
+          name: Install dependencies
           command: |
-            python3 -m venv venv
-            . venv/bin/activate
-            pip install -r requirements.txt
+            pip install docker-compose==1.12.0
       - run:
+          name: Build application Docker image
           command: |
-            . venv/bin/activate
-            cd test
-            python main.test.py
+            docker build -t FILL/sse-member:"$CIRCLE_SHA1" .
+      - run:
+          name: Run tests
+          command: |
+            docker run -e FLASK_CONFIG=testing FILL/sse-member:"$CIRCLE_SHA1"
+      - deploy:
+          name: Push application Docker image
+          command: |
+            if [ "${CIRCLE_BRANCH}" == "master" ]; then
+              docker login -u="$DOCKER_USERNAME" -p="$DOCKER_PASSWORD";
+              docker tag FILL/sse-member:"$CIRCLE_SHA1" FILL/sse-member:latest;
+              docker push FILL/sse-member:"$CIRCLE_SHA1";
+              docker push FILL/sse-member:latest;
+            fi
