--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,7 +7,7 @@ jobs:
       - run:
           name: Build application Docker image
           command: |
-            docker build -t ritsse/sse-member:"$CIRCLE_SHA1" .
+            docker build -t ritsse/sse-member:"$CIRCLE_SHA1" -f Dockerfile.build .
       - run:
           name: Run tests
           command: |
