--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-router-dom": "^4.2.2",
-    "react-scripts": "1.1.1"
+    "react-scripts": "1.1.1",
+    "sse-api-client": "git+https://github.com/rit-sse/api-client.git"
   },
   "scripts": {
     "start": "react-scripts start",
